K8s-files/innerapiclientsvc.yml
apiVersion: v1
kind: Service
metadata:
  name: innerapiclient-service
  namespace: innerapi
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: innerapiclient
  type: ClusterIP
