K8s-files/innerapiclientingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: innerapiclient-ingress
  namespace: innerapi
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /innerapiclient(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: innerapiclient-service
                port:
                  number: 8080
